--- a/templates/app.html
+++ b/templates/app.html
@@ -13,6 +13,8 @@
     <!-- We've provide some simple styling to get you started. -->
     <link href="/static/VidyoConnector.css" rel="stylesheet" type="text/css">
 
+    <script src="/static/fabric.js"></script>
+
     <!-- Here we load the application which knows how to
     invoke the VidyoConnector API. -->
     <script type="text/javascript">
@@ -77,6 +79,9 @@
 	$(function() {
 		$("#monitorShareParagraph").addClass("hidden");
 		loadVidyoClientLibrary(true, false);
+		$("#wbCanvas").attr("width", $("#wbCanvas").outerWidth() * 2);
+		$("#wbCanvas").attr("height", $("#wbCanvas").outerHeight() * 2);
+		drawCrap();
 	});
 
     </script>
@@ -131,6 +136,11 @@ to hook up all of the events to elements. -->
 <!-- This is the div into which the Vidyo component will be inserted. -->
 <div id="renderer" class="rendererWithOptions pluginOverlay hidden">
 </div>
+<div id="whiteboard">
+    <canvas id="wbCanvas">
+    </canvas>
+</div>
+
 <div id="toolbarLeft" class="toolbar">
     <span id="participantStatus"></span>
 </div>
