--- a/static/VidyoConnector.css
+++ b/static/VidyoConnector.css
@@ -208,16 +208,42 @@ html, body {
 
 
 #whiteboard {
- width: 30vw;
- position: absolute;
- top: 2vh;
- right: 2vh;
- bottom: CALC(2vh + 58px);
- background-color: #FFFFFF;
- z-index: 1000;
+    width: 30vw;
+    position: absolute;
+    top: 2vh;
+    right: 2vh;
+    bottom: CALC(2vh + 58px);
+    background-color: #FFFFFF;
+    z-index: 1000;
+    display: none;
+    border: 2px solid #888888;
+    border-radius: 8px;
+}
+
+#whiteboardBtn {
+    width: 32px;
+    height: 32px;
+    position: absolute;
+    top: calc(2vh + 16px);
+    right: calc(2vh + 16px);
+    background-color: rgb(19, 38, 58);
+    z-index: 1010;
+    border-radius: 16px;
+}
+
+#whiteboardBtn img {
+    width: 50%;
+    height: 50%;
+    padding: 25%;
 }
 
 #wbCanvas {
+    width: 100%;
+    height: 100%;
+}
+
+body, html {
+    overflow: none;
     width: 100%;
     height: 100%;
 }
